--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -14,28 +14,16 @@
 
     <body>
         <div class='container'>
-            <!-- <nav class="nav-extended  green lighten-2">
-                <div class="nav-wrapper">
-                    <a href="#" class="brand-logo center">Thunder的Python学习之路</a>
-                </div>
-            </nav> -->
-            <div id="index-banner" class="parallax-container">
-              <div class="section no-pad-bot">
-                <div class="container">
-                  <br><br>
-                  <h1 class="header center teal-text text-lighten-2">视差模板</h1>
-                  <div class="row center">
-                    <h5 class="header col s12 light">基于Material Design的主流前端响应式框架</h5>
-                  </div>
-                  <div class="row center">
-                    <a href="http://www.materializecss.cn/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">开始学习</a>
-                  </div>
-                  <br><br>
-
+          <div class="row">
+            <div class="col s12">
+              <div class="card">
+                <div class="card-image">
+                  <img src="http://www.imthunder.xin/media/uuu.jpg">
+                  <h5 class="card-title ">Thunder | Pythonの路</h5>
                 </div>
               </div>
-              <div class="parallax"><img src="/media/media.png" alt="Unsplashed background img 1"></div>
             </div>
+          </div>
         </div>
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
