--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -19,7 +19,7 @@
               <div class="card">
                 <div class="card-image">
                   <img src="http://www.imthunder.xin/media/uuu.jpg">
-                  <h5 class="card-title ">Thunder | Pythonの路</h5>
+                  <span class="card-title ">Thunder | Pythonの路</span>
                 </div>
               </div>
             </div>
