--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+<!-- {% load staticfiles %} -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"  media="screen,projection"/>
-        <link href='{% static "css/base.css" %}' rel='stylesheet'>
+        <!-- <link href='{% static "css/base.css" %}' rel='stylesheet'> -->
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -19,7 +19,7 @@
               <div class="card">
                 <div class="card-image">
                   <img src="http://www.imthunder.xin/media/uuu.jpg">
-                  <span class="card-title ">Thunder | Pythonの路</span>
+                  <span class="card-title">Thunder | Pythonの路</span>
                 </div>
               </div>
             </div>
